syntax = "proto3";

package product_analysis;

option go_package = "github.com/faisaloncode/ecommerce-crawler/product-analysis/proto";

service ProductAnalysisService {
  rpc Health(HealthRequest) returns (HealthResponse) {}
  rpc AnalyzeProduct(AnalyzeProductRequest) returns (AnalyzeProductResponse) {}
  rpc UpdateProductPriority(UpdateProductPriorityRequest) returns (UpdateProductPriorityResponse) {}
  rpc GetProductAnalytics(GetProductAnalyticsRequest) returns (GetProductAnalyticsResponse) {}
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
}

message ProductData {
  string id = 1;
  string name = 2;
  string description = 3;
  string category_id = 4;
  string brand_id = 5;
  string seller_id = 6;
  float rating_score = 7;
  int32 favorite_count = 8;
  int32 comment_count = 9;
  int32 view_count = 10;
  int32 add_to_cart_count = 11;
  int32 order_count = 12;
  string size_recommendation = 13;
  string estimated_delivery = 14;
  bool is_active = 15;
  repeated ProductVariant variants = 16;
  repeated ProductImage images = 17;
  repeated ProductAttribute attributes = 18;
  repeated string similar_product_ids = 19;
  repeated Review top_reviews = 20;
}

message ProductVariant {
  string id = 1;
  string sku = 2;
  string color = 3;
  string size = 4;
  float price = 5;
  float original_price = 6;
  int32 stock_quantity = 7;
  bool is_active = 8;
}

message ProductImage {
  string url = 1;
  int32 sort_order = 2;
  bool is_video = 3;
}

message ProductAttribute {
  string name = 1;
  string value = 2;
}

message Review {
  string id = 1;
  int32 rating = 2;
  string comment = 3;
  string reviewer_name = 4;
  string review_date = 5;
  bool is_top_review = 6;
}

message AnalyzeProductRequest {
  ProductData product = 1;
}

message AnalyzeProductResponse {
  string status = 1;
  repeated string notifications = 2;
}

message UpdateProductPriorityRequest {
  string product_id = 1;
  bool is_favorited = 2;
}

message UpdateProductPriorityResponse {
  string status = 1;
}

message GetProductAnalyticsRequest {
  string product_id = 1;
}

message GetProductAnalyticsResponse {
  float price_trend = 1;
  float stock_trend = 2;
  int32 favorite_count_trend = 3;
  float popularity_score = 4;
  repeated PriceHistory price_history = 5;
}

message PriceHistory {
  string variant_id = 1;
  float old_price = 2;
  float new_price = 3;
  string changed_at = 4;
}
